--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Grant execute permission to gradlew
+        run: chmod +x gradlew
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
+
       - uses: android-actions/setup-android@v3
 
       - name: Set snapshot flag
@@ -37,10 +42,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Grant execute permission to gradlew
+        run: chmod +x gradlew
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
+
       - uses: android-actions/setup-android@v3
 
       - name: Set snapshot flag
@@ -68,10 +78,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Grant execute permission to gradlew
+        run: chmod +x gradlew
+
       - uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: 17
+
       - uses: android-actions/setup-android@v3
 
       - name: Set snapshot flag
